--- a/projects/project2/CENTRAL_SERVER_MANIFEST.json
+++ b/projects/project2/CENTRAL_SERVER_MANIFEST.json
@@ -1,12 +1,20 @@
 {
   "results": [
     {
-      "filename": "whatever",
-      "description": "okay"
+      "filename": "gradlew",
+      "description": "Shell script for running gradle on your Linux machine"
     },
     {
-      "filename": "whatever",
-      "description": "okay"
+      "filename": "build.gradle",
+      "description": "Build file for gradle"
+    },
+    {
+      "filename": "settings.gradle",
+      "description": "Settings file for gradle"
+    },
+    {
+      "filename": "README.md",
+      "description": "Markdown file for project"
     }
   ]
 }
