Change jar location

--- a/projects/project3/server/build.gradle
+++ b/projects/project3/server/build.gradle
@@ -1,4 +1,4 @@
-def main = "edu.gvsu.cis.campbjos.central.CentralServer"
+def main = "edu.gvsu.cis.campbjos.imgine.central.CentralServer"
 
 jar {
     baseName = 'p2p-server'
