--- a/projects/project3/CENTRAL_SERVER_MANIFEST.json
+++ b/projects/project3/CENTRAL_SERVER_MANIFEST.json
@@ -5,6 +5,10 @@
       "description": "Tree photo"
     },
     {
+      "filename": "tree.png",
+      "description": "Tree photo"
+    },
+    {
       "filename": "86-xor.gif",
       "description": "Architecture gif display an XOR"
     }
