--- a/projects/project3/CENTRAL_SERVER_MANIFEST.json
+++ b/projects/project3/CENTRAL_SERVER_MANIFEST.json
@@ -5,12 +5,16 @@
       "description": "Tree photo"
     },
     {
-      "filename": "tree.png",
-      "description": "Tree photo"
+      "filename": "tree_three.jpeg",
+      "description": "tree outside it's beautiful"
     },
     {
-      "filename": "86-xor.gif",
-      "description": "Architecture gif display an XOR"
+      "filename": "treebeard.png",
+      "description": "lotr trees isengard"
+    },
+    {
+      "filename": "we_have_lost_the_plot.png",
+      "description": "math and stuff angles"
     }
   ]
 }
